// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendBroadcastForm event handles recipent change 1`] = `
Object {
  "recipients": Object {
    "value": Array [
      Object {
        "id": "group-0",
        "name": "My Group",
      },
    ],
  },
  "text": Object {
    "value": "Hello World",
  },
  "valid": true,
}
`;

exports[`SendBroadcastForm event handles text change 1`] = `
Object {
  "recipients": Object {
    "value": Array [
      Object {
        "id": "group-0",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "group-1",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "contact-0",
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "contact-1",
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "contact-2",
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "text": Object {
    "value": "Message to Group",
  },
  "valid": true,
}
`;

exports[`SendBroadcastForm render should render an empty form with no action 1`] = `
Object {
  "recipients": Object {
    "value": Array [],
  },
  "text": Object {
    "value": "",
  },
  "valid": false,
}
`;

exports[`SendBroadcastForm render should render an empty form with no action 2`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  title="Send Broadcast"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send somebody else a message",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send Broadcast",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <OmniboxElement
    add={true}
    assets={
      RecipientAssets {
        "assets": Object {},
        "endpoint": "/assets/recipients.json",
        "idProperty": "uuid",
        "localStorage": true,
      }
    }
    className="recipients"
    data-spec="recipients"
    entry={
      Object {
        "value": Array [],
      }
    }
    name="Recipients"
    onChange={[Function]}
    placeholder="Enter a group or contact..."
    searchPromptText="No matches"
  />
  <Connect(TextInputElement)
    autocomplete={true}
    count="SMS"
    entry={
      Object {
        "value": "",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    showLabel={false}
    textarea={true}
  />
</Dialog>
`;

exports[`SendBroadcastForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  title="Send Broadcast"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send somebody else a message",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send Broadcast",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <OmniboxElement
    add={true}
    assets={
      RecipientAssets {
        "assets": Object {},
        "endpoint": "/assets/recipients.json",
        "idProperty": "uuid",
        "localStorage": true,
      }
    }
    className="recipients"
    data-spec="recipients"
    entry={
      Object {
        "value": Array [
          Object {
            "id": "group-0",
            "name": "Cat Fanciers",
            "type": "group",
          },
          Object {
            "id": "group-1",
            "name": "Cat Facts",
            "type": "group",
          },
          Object {
            "id": "contact-0",
            "name": "Kellan Alexander",
            "type": "contact",
          },
          Object {
            "id": "contact-1",
            "name": "Norbert Kwizera",
            "type": "contact",
          },
          Object {
            "id": "contact-2",
            "name": "Rowan Seymour",
            "type": "contact",
          },
        ],
      }
    }
    name="Recipients"
    onChange={[Function]}
    placeholder="Enter a group or contact..."
    searchPromptText="No matches"
  />
  <Connect(TextInputElement)
    autocomplete={true}
    count="SMS"
    entry={
      Object {
        "value": "Hello World",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    showLabel={false}
    textarea={true}
  />
</Dialog>
`;
